--- a/web/styles/portico/portico_signin.css
+++ b/web/styles/portico/portico_signin.css
@@ -108,7 +108,7 @@ html {
 
         & select {
             height: 30px;
-            padding: 4px 6px;
+            padding: 0 6px;
             width: 220px;
             font-size: 14px;
             color: hsl(0deg 0% 33%);
